--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ glob = "0.3.0"
 colored = "2.0.0"
 prettytable-rs = "0.8.0"
 byte-unit = "4.0.12"
-clap = "3.0.0-beta.2"
+clap = { version = "3.0.7", features = ["derive"] }
