--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "shd"
 version = "0.1.4"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+description = "Shows pretty HDD/SSD list"
+authors = ["Serhij S. <div@altertech.com>"]
+repository = "https://github.com/alttch/shd"
+keywords = ["ssd", "hdd", "list", "cli"]
 
 [dependencies]
 serde = { version = "1.0.127", features = ["derive"] }
